# synth

./:  SynthVoice.cpp  CMakeLists.txt  LFO.cpp  LFO.h  Oscillator.cpp  Oscillator.h  Synth.cpp  Synth.h  SynthVoice.cpp  SynthVoice.h  gui.cpp  gui.h  imgui.ini  main.cpp
